feat: accept attachments
